# Engineer_Vision

./: COLOR_TUNING_GUIDE.md  README.md  Station_detector.md  param_editing.md
src/mindvision_camera/: CMakeLists.txt  README.md  package.xml
src/mindvision_camera/config/: camera_info.yaml  camera_params.yaml
src/mindvision_camera/launch/: mv_launch.py
src/mindvision_camera/src/: mv_camera_node.cpp
src/station_detector/: CMakeLists.txt  package.xml
src/station_detector/config/: fake_camera_info.yaml  station_params.yaml
src/station_detector/include/: debug_manager.h  fusion_station_detector.h  kalman_filter.h  station_params.h  station_pose_estimator.h
src/station_detector/launch/: real_camera.launch.py  static_image_pub.launch.py  test_video.launch.py
src/station_detector/scripts/: static_image_pub.py
src/station_detector/src/: debug_manager.cpp  fusion_station_detector.cpp  kalman_filter.cpp  main.cpp  station_params.cpp  station_pose_estimator.cpp
